5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1734_2503.log
== SUBMITION (2019-05-11 14:40:28) 
-- CODE:
from math import *

n = int(input("Fale a quantidades de termos da serie, macho: "))

soma = 4/1
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * (4/(cont*2+1))
	cont = cont + 1

print(round(soma,8))
-- EXECUTION TIME:
0.141107
-- ERROR:
  File "/home/codebench/codes/1734/2503/main.py", line 8
    while (cont < n)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:40:38) 
-- CODE:
from math import *

n = int(input("Fale a quantidades de termos da serie, macho: "))

soma = 4/1
cont = 1

while (cont < n)
	soma = soma + (-1)**cont * (4/(cont*2+1))
	cont = cont + 1

print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    while (cont < n)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 14:40:49) 
-- CODE:
from math import *

n = int(input("Fale a quantidades de termos da serie, macho: "))

soma = 4/1
cont = 1

while (cont < n):
	soma = soma + (-1)**cont * (4/(cont*2+1))
	cont = cont + 1

print(round(soma,8))
-- EXECUTION TIME:
0.123433
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
